force-app/main/default/objects/Application_Fee__c/Application_Fee__c.object-meta.xml
<CustomObject>
    <description>Costs and Fees associated with mortgage</description>
    <label>Application Fee</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Application Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>