force-app/main/default/objects/Application_Fee__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>