force-app/main/default/objects/Application_Fee__c/fields/Deduct__c.field-meta.xml
<CustomField>
    <fullName>Deduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduct from principal</label>
    <type>Checkbox</type>
</CustomField>