force-app/main/default/objects/Application_Fee__c/fields/FilogixID__c.field-meta.xml
<CustomField>
    <fullName>FilogixID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Filogix ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>