force-app/main/default/objects/Application_Fee__c/fields/Include_in_APR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_APR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in APR</label>
    <type>Checkbox</type>
</CustomField>