force-app/main/default/objects/Application_Fee__c/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <description>Fee associated with Mortgage</description>
    <inlineHelpText>Fee associated with Mortgage</inlineHelpText>
    <label>Mortgage</label>
    <referenceTo>Mortgage__c</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>