force-app/main/default/objects/Application_Fee__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>