force-app/main/default/objects/Application_Fee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration fee</fullName>
            </value>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Broker Fee</fullName>
            </value>
            <value>
                <fullName>Brokerage Fee</fullName>
            </value>
            <value>
                <fullName>Disability Insurance Fee</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Fee to Register Mortgage</fullName>
            </value>
            <value>
                <fullName>Fire Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Fees</fullName>
            </value>
            <value>
                <fullName>Legal Fees and Disbursements</fullName>
            </value>
            <value>
                <fullName>Mortgage Insurance Application Fee</fullName>
            </value>
            <value>
                <fullName>Mortgage Insurance Premium - Tax</fullName>
            </value>
            <value>
                <fullName>Mortgage Insurance Premium</fullName>
            </value>
            <value>
                <fullName>Mortgage Renewal Fee</fullName>
            </value>
            <value>
                <fullName>Other Lender Fees</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payout Interest Penalty</fullName>
            </value>
            <value>
                <fullName>Property Tax Holdback</fullName>
            </value>
            <value>
                <fullName>Shares Purchased to Join Credit Union</fullName>
            </value>
            <value>
                <fullName>Survey Costs</fullName>
            </value>
            <value>
                <fullName>Title Insurance Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>